# kairos

./: .hlint.yaml  CHANGELOG.md  README.md  cabal.ghc9101.project.freeze  cabal.ghc9122.project.freeze  cabal.project  flake.nix  hie.yaml  kairos.cabal  stack.yaml  time-conv.cabal
.github/scripts/: release_linux.sh  release_linux_static.sh  release_osx.sh  release_windows.sh  verify_env.sh
.github/workflows/: ci.yaml  ci2.yaml
app/: Main.hs
docker/alpine_amd64/: Dockerfile
docker/alpine_arm64v8/: Dockerfile
docs/: Kairos-Internal.html  Kairos-Types-Date-Internal.html  Kairos-Types-Date.html  Kairos-Types-Exception.html  Kairos-Types-TZInput.html  Kairos-Types-TimeFormat.html  Kairos-Types-TimeReader.html  Kairos.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  doc-index.json  index.html  kairos-core.haddock  kairos.haddock
docs/src/: Kairos.Internal.html  Kairos.Types.Date.Internal.html  Kairos.Types.Date.html  Kairos.Types.Exception.html  Kairos.Types.TZInput.html  Kairos.Types.TimeFormat.html  Kairos.Types.TimeReader.html  Kairos.html
examples/: config.toml
lib/core/: CHANGELOG.md  kairos-core.cabal  kairos.cabal
lib/core/src/: Kairos.hs
lib/core/src/Kairos/: Internal.hs
lib/core/src/Kairos/Types/: Date.hs  Exception.hs  TZInput.hs  TimeFormat.hs  TimeReader.hs
lib/core/src/Kairos/Types/Date/: Internal.hs
lib/core/test/unit/: Main.hs
lib/core/test/unit/Props/: Generators.hs
lib/core/test/unit/Unit/: Kairos.hs  Utils.hs
lib/core/test/unit/Unit/Kairos/: Internal.hs
lib/core/test/unit/Unit/Kairos/Types/: Date.hs  TZInput.hs
lib/exe/: CHANGELOG.md  kairos-exe.cabal  kairos.cabal
lib/exe/app/: Main.hs
lib/exe/examples/: config.toml
lib/exe/runner/Kairos/: Runner.hs
lib/exe/runner/Kairos/Runner/: Args.hs  Toml.hs
lib/exe/runner/Kairos/Runner/Args/: TH.hs
lib/exe/test/functional/: Main.hs  Params.hs
runner/Kairos/Runner/: Args.hs
runner/TimeConv/: Runner.hs
runner/TimeConv/Runner/: Args.hs
src/: Kairos.hs
src/Data/Time/: Conversion.hs
src/Data/Time/Conversion/Types/: Date.hs  Exception.hs  TZInput.hs  TimeFormat.hs  TimeReader.hs
src/Data/Time/Conversion/Types/Date/: Internal.hs
src/Kairos/Types/: Date.hs
src/Kairos/Types/Date/: Internal.hs
test/functional/: Main.hs
test/unit/Unit/Data/Time/: Conversion.hs
test/unit/Unit/Kairos/: Internal.hs
test/unit/Unit/Kairos/Types/: Date.hs
tools/: haddock.sh
