cabal-version:      2.4
name:               kairos
version:            0.1.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/kairos/
bug-reports:        https://github.com/tbidne/kairos/issues
synopsis:           A utility program for converting between timezones.
description:
  A utility program for converting between timezones.
  Please see the README at https://github.com/tbidne/kairos/#readme

category:           Time, Shell scripting
extra-doc-files:    CHANGELOG.md
extra-source-files: examples/config.toml

source-repository head
  type:     git
  location: https://github.com/tbidne/kairos

common common-lang
  default-extensions:
    ApplicativeDo
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

  default-language:   Haskell2010

library kairos-runner
  import:          common-lang
  other-modules:   Paths_kairos
  autogen-modules: Paths_kairos
  exposed-modules:
    Kairos.Runner
    Kairos.Runner.Args
    Kairos.Runner.Args.TH
    Kairos.Runner.Toml

  build-depends:
    , base                  >=4.14.0.0 && <4.22
    , containers            >=0.6.3.1  && <0.9
    , effects-fs            ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-time          ^>=0.1
    , exception-utils       ^>=0.1
    , exceptions            ^>=0.10.4
    , gitrev-typed          ^>=0.1
    , kairos-core           ^>=0.1
    , optics-core           ^>=0.4
    , optparse-applicative  >=0.16.1.0 && <0.19
    , os-string             ^>=2.0.0
    , template-haskell      >=2.17.0.0 && <2.24
    , text                  >=1.2.3.2  && <2.2
    , time                  >=1.9.3    && <1.15
    , toml-reader           >=0.2.0.0  && <0.3

  hs-source-dirs:  runner

executable kairos
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , kairos-runner

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Params
  build-depends:
    , base
    , effects-env       ^>=0.1
    , effects-fs
    , effects-ioref     ^>=0.1
    , effects-optparse
    , effects-terminal
    , effects-time
    , env-guard         ^>=0.2
    , exceptions
    , kairos-core
    , kairos-runner
    , mtl               >=2.2.2 && <2.4
    , optics-core
    , tasty
    , tasty-hunit
    , text
    , time

  hs-source-dirs: test/functional
